# stockregrets

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/config/: config.py
